--- a/src/template/main.html
+++ b/src/template/main.html
@@ -1,39 +1,132 @@
 <div class="container">
 	<section>
-		<h1 class="title">Наши преимущества</h1>
+		<h1 class="title" id="anchor">Наши преимущества</h1>
 		<span class="title__line"></span>
 		<ul class="advantages">
 			<li class="advantages__item">
-				<div class="advantages__picture"></div>
+				<div class="advantages__picture advantages__picture--hands"></div>
 				<div class="advantages__title">Одобрение Онлайн</div>
-				<p class="advantages__text">Заполните онлайн-заявку на сайте и получите решение и кредитный рейтинг за пару минут.</p>
+				<p class="advantages__text">Заполните онлайн-заявку на сайте и получите решение и Ваш кредитный рейтинг за пару минут.</p>
 			</li>
-			<li class="advantages__item">
-				<div class="advantages__picture"></div>
+			<li class="advantages__item advantages__item--card">
+				<div class="advantages__picture advantages__picture--credit-card"></div>
 				<div class="advantages__title">Мгновенный перевод денег</div>
 				<p class="advantages__text">После одобрения, деньги будут мгновенно отправлены на Вашу карту Visa или Mastercard любого банка.</p>
 			</li>
-			<li class="advantages__item">
-				<div class="advantages__picture"></div>
+			<li class="advantages__item advantages__item--right">
+				<div class="advantages__picture advantages__picture--procent"></div>
 				<div class="advantages__title">Улучшение условий</div>
 				<p class="advantages__text">Для добросовестных клиентов мы предлогаем повышение кредитного рейтинга, улучшение условий и снижение процентной ставки.</p>
 			</li>
-			<li class="advantages__item">
-				<div class="advantages__picture"></div>
-				<div class="advantages__title">Прозрачные условия</div>
+			<li class="advantages__item advantages__item--pen">
+				<div class="advantages__picture advantages__picture--pen-list"></div>
+				<div class="advantages__title advantages__title--low">Прозрачные условия</div>
 				<p class="advantages__text">Чем лучше Ваша кредитная история, тем лучше будут условия в Кредео.</p>
 			</li>
-			<li class="advantages__item">
-				<div class="advantages__picture"></div>
-				<div class="advantages__title">Ежемесячный платеж</div>
+			<li class="advantages__item advantages__item--calendar">
+				<div class="advantages__picture advantages__picture--calendar"></div>
+				<div class="advantages__title advantages__title--low">Ежемесячный платеж</div>
 				<p class="advantages__text">Равными суммами, без дополнительных комиссий и скрытых платежей.</p>
 			</li>
-			<li class="advantages__item">
-				<div class="advantages__picture"></div>
-				<div class="advantages__title">Досрочное погашение</div>
+			<li class="advantages__item advantages__item--right">
+				<div class="advantages__picture advantages__picture--time"></div>
+				<div class="advantages__title advantages__title--low">Досрочное погашение</div>
 				<p class="advantages__text">За досрочное погашение не взимается никаких дополнительных комиссий.</p>
 			</li>
 		</ul>
 	</section>
-		
+	<section class="credit-rating">
+		<h1 class="title">Ваш кредитный рейтинг</h1>
+		<span class="title__line"></span>
+		<div class="rating">
+			<p class="rating__text">Кредитный рейтинг это оценка, основанная на Вашей кредитной истории и персональных данных, обработанная в скоринговой системе. Оценка позволяет нам предложить Вам индивидуальные кредитные условия. Чем выше кредитный рейтинг, тем более привлекательные условия мы готовы предоставить.</p>
+			<ul class="ratinginfo">
+				<li class="ratinginfo__item">
+					<span class="plus--small"></span>
+					<span class="ratinginfo__text">После заполнения анкеты вы получите информацию о Вашем кредитном рейтинге и возможности его улучшения.</span>
+				</li>
+				<li class="ratinginfo__item ">
+					<span class="plus--small"></span>
+					<span class="ratinginfo__text">Также Вы сможете скорректировать сумму задолжности исходя из фактического ежемесячного платежа</span>
+				</li>
+				<li class="ratinginfo__item">
+					<span class="plus--small"></span>
+					<div class="ratinginfo__text">Все наши повторные клиенты получают повышение кредитного рейтинга при каждом обращении</div>
+				</li>
+			</ul>
+		</div>
+		<div class="diagram">
+			<span class="diagram__title">Кредитный рейтинг</span>
+			<div class="diagram__img">
+				<img src="img/diagram.jpg" alt="diagram">	
+			</div>
+		</div>
+	</section>
+	<section class="service-section">
+		<h1 class="title">Сервис кредео</h1>
+		<span class="title__line"></span>
+		<div class="service">
+			<div class="service__img decrease"></div>
+			<div class="service__info">
+				<h2 class="service__title">Снижение ставки</h2>
+				<p class="service__text">Для выдачи денег, Кредео привлекает множество кредитов, которые онкурируют за Вашу заявку благодаря этому мы постоянно снижаем ставку в рамках Вашего кредитного рейтинга.</p>
+				<p class="service__text">Наши условия будут выгоднее для Вас, чем займы в МФО</p>
+			</div>
+		</div>
+		<div class="service service--right">
+			<div class="service__info">
+				<h2 class="service__title">Улучшение рейтинга</h2>
+				<p class="service__text">Мы заинтересованы в долгосрочном сотрудничестве и постоянно ищем возможность улучшить Ваш кредитный рейтинг. Даже с теми клиентами, кто попал во временную просрочку, мы ищем возможность не портить кредитную историю и найти приемлемое решение.</p>
+			</div>
+			<div class="service__img  increase"></div>
+		</div>
+	</section>
+	<section class="howItWork">
+		<h1 class="title">Как это работает?</h1>
+		<span class="title__line"></span>
+		<div class="howItWork__img">
+			<img src="img/howItWork.jpg" alt="how it work">
+		</div>
+		<div class="howItWork__info">
+			<p class="howItWork__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commo&shy;do consequat.</p>
+			<p class="howItWork__text howItWork__text--second">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<div class="howItWork__info howItWork__info--2nd">
+			<p class="howItWork__text howItWork__text--3rd">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commo&shy;do consequat.</p>
+			<p class="howItWork__text howItWork__text--4th">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<div class="howItWork__img howItWork__img--2nd">
+			<img src="img/rate.jpg" alt="rates">
+		</div>
+	</section>
+	<section class="repayment">
+		<h1 class="title">Погашение</h1>
+		<span class="title__line"></span>
+		<div class="repayment__block">
+			<div class="question">
+				<div class="question__text">Как<br>погасить?</div>
+				<div class="question__line"></div>
+			</div>
+			<div class="question question--2nd">
+				<div class="question__text question__text--2nd">Как уточнить и дату<br>сумму платежа</div>
+				<div class="question__line"></div>
+			</div>
+			<div class="question question--3rd">
+				<div class="question__text question__text--3rd">Досрочное погашение</div>
+			</div>
+		</div>
+		<p class="repayment__info">Погасить займ вы можете в своем личном кабинете, выбрав удобный для Вас способ.</p>
+		<div class="repayment__way">
+			<span class="plus--small"></span>
+			<div class="wayinfo">Банковской картой Visa или &nbsp;Mastercard</div>
+		</div>
+		<div class="repayment__way repayment__way--2nd">
+			<span class="plus--small"></span>
+			<div class="wayinfo">Банковским переводом по реквизитом счета</div>
+		</div>
+		<div class="repayment__ps">
+			<span class="small-calendar"></span>
+			<div class="ps-info">Кредит погашается ежемесячно павными платежами в одну и ту же дату.Мы дадим Вам график с датами погашения и суммами ежемесячных платежей.</div>
+		</div>			
+	</section>
 </div>
